resolved meeting comments
- using properties for versioning dependencies
- lombok scope 'provided'
- import without wildcard
- @RequiredArgsConstructor instead of writing constuctor
- logger instance to upper case
- value ingection in constructor
- storage @Component deleted ( cz we using @Bean for every storage )
- passwordGenerator - using bean of this class instead of static
- ToString on fields
- jacoco pluugin impl and tested coverage